--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "react": "^18",
   "react-dom": "^18",
   "tailwind-merge": "^2.2.0",
-  "tailwindcss-animate": "^1.0.7"
+  "tailwindcss-animate": "^1.0.7",
+  "use-sound": "^4.0.1"
  },
  "devDependencies": {
   "@types/node": "^20",
@@ -29,6 +30,7 @@
   "autoprefixer": "^10.0.1",
   "eslint": "^8",
   "eslint-config-next": "14.0.4",
+  "file-loader": "^6.2.0",
   "postcss": "^8",
   "tailwind-scrollbar": "^3.0.5",
   "tailwindcss": "^3.3.0",
